--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,18 @@
   padding: 20px;
   margin-left: -8px;
 }
+
+#btn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #111;
+  color: #fff;
+  cursor: pointer;
+}
+
+#btn:hover {
+  background: #888;
+  color: black;
+}
